# garbage_cnn_classifier

./: Dockerfile  app.py  dvc.yaml  main.py  params.yaml  pyproject.toml  requirements.txt  scores.json  setup.py
.github/workflows/: main.yaml
config/: config.yaml
research/: 01_data_ingestion.ipynb  02_prepare_base_model.ipynb  03_model_trainer.ipynb  04_model_evaluation.ipynb  04_model_evaluation_with_mlflow.ipynb  trials.ipynb
src/cnnClassifier/components/: data_ingestion.py  model_evaluation_mlflow.py  model_trainer.py  prepare_base_model.py
src/cnnClassifier/config/: configuration.py
src/cnnClassifier/entity/: config_entity.py
src/cnnClassifier/pipeline/: prediction.py  stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_model_trainer.py
templates/: index.html
