[tool.poetry]
name = "cnnClassifier"
packages = [{ include = "cnnClassifier", from = "src" }]
version = "0.1.0"
description = ""
authors = ["hellum55 <hellum.christian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "2.17.1"
pandas = "^2.2.3"
numpy = "1.26.4"
gdown = "^5.2.0"
dvc = "^3.59.1"
mlflow = "^2.21.2"
notebook = "^7.3.3"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
python-box = "^7.3.2"
pyyaml = "^6.0.2"
tqdm = "^4.67.1"
ensure = "^1.0.4"
joblib = "^1.4.2"
types-pyyaml = "^6.0.12.20250326"
scipy = "^1.15.2"
flask = "^3.1.0"
flask-cors = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
